--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -75,7 +75,7 @@
 }
 
 .tags-span {
-  background-color: rgb(3, 148, 148);
+  background-color: #3b5998 ;
   border-radius: 15px;
   display: inline-block;
   margin-left: 10px;
