--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,19 +1,12 @@
 .container-header {
-  background-color: rgb(72, 240, 203);
+  background-color: #3b5998;
   padding: 30px;
   width: 100%;
   margin-bottom: 15px;
 }
 
 .title-header {
-  color: rgb(29, 8, 8);
-  font-size: 28px;
+  color: rgb(255, 255, 255);
+  font-size: 48px;
   text-align: center;
-}
-
-.sort {
-  width: 200px;
-  background-color: rgb(223, 250, 126);
-  display: block;
-  margin: 0 auto;
 }
