--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -3,14 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   box-sizing: border-box;
-  border: 3px solid rgb(34, 2, 2);
   margin: 20px 0;
-}
-
-.sort {
-  background-color: #fff;
-  width: 200px;
-  border: 1px solid red;
 }
 
 .container-sort {
@@ -26,5 +19,13 @@
 .button-find {
   margin-left: 20px;
   width: 100px;
-  cursor: pointer;
+}
+
+.form {
+  display: flex;
+  justify-content: space-between;
+}
+
+#sort {
+  width: 20%;
 }
