--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,10 +1,9 @@
 .container-card {
   display: flex;
-  flex-basis: 22%;
   margin-top: 50px;
   border-radius: 5px;
   flex-direction: column;
-  width: 25%;
+  width: 24%;
   position: relative;
 
   &:hover {
@@ -12,12 +11,24 @@
     box-shadow: 0 8px 14px rgba(0, 0, 0, 0.48);
     transition: transform 1s;
   }
+
+  @media (max-width: 1100px) {
+    width: 30%;
+  }
+
+  @media (max-width: 768px) {
+    width: 48%;
+  }
+
+  @media (max-width: 500px) {
+    width: 75%;
+    margin: 50px auto;
+  }
 }
 
 .image {
   height: 200px;
   cursor: pointer;
-  border-radius: 5%;
 }
 
 .link-about {
