--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -3,17 +3,16 @@
   flex-wrap: wrap;
   justify-content: space-between;
   box-sizing: border-box;
-  margin: 20px 0;
+  margin: 20px auto;
 }
 
 .container-sort {
   display: flex;
   justify-content: space-between;
-}
 
-.search-tags {
-  width: 200px;
-  border: 1px solid red;
+  @media (max-width: 1100px) {
+    flex-direction: column;
+  }
 }
 
 .button-find {
@@ -24,8 +23,18 @@
 .form {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 1100px) {
+    margin: 0 auto;
+    width: 80%;
+  }
 }
 
 #sort {
   width: 20%;
+  @media (max-width: 1100px) {
+    display: block;
+    margin: 20px auto;
+    width: 80%;
+  }
 }
